@@ -39,6 +39,19 @@ $check_movie   = false;
 $check_name    = false;
 $check_charts  = false;
 $check_nowplay = false;
+$uri = $_SERVER['REQUEST_URI'];
+if ( strpos($uri,'?')>0 ) $uri .= '&amp;';
+else $uri .= '?';
+raw("<SPAN STYLE='margin-right:2em;'><A HREF='{$uri}api=imdb'>IMDB</A></SPAN><SPAN STYLE='margin-left:2em;'><A HREF='{$uri}api=pilot'>PILOT</A></SPAN>\n");
+if ( empty($_REQUEST['api']) && !in_array($_REQUEST['api'],array('imdb','pilot')) ) {
+  if (CRON) $api = 'imdb';
+  else {
+    raw("</BODY></HTML>\n");
+    exit;
+  }
+} else {
+  $api = $_REQUEST['api'];
+}
 switch ($_REQUEST["check"]) {
   case "movie"   : $check_movie   = true; break;
   case "name"    : $check_name    = true; break;
@@ -57,10 +70,10 @@ if (!empty($_REQUEST["skip"])) {
 }
 
 #=========================================================[ Run the tests ]===
-if ($check_movie)   require ("imdb.inc");
-if ($check_name)    require ("imdb_person.inc");
-if ($check_charts)  require ("imdb_charts.inc");
-if ($check_nowplay) require ("imdb_nowplaying.inc");
+if ($check_movie)   { if ($api=='imdb') require('imdb.inc'); else require('pilot.inc'); }
+if ($check_name)    { if ($api=='imdb') require('imdb_person.inc'); else require ('pilot_person.inc'); }
+if ($check_charts)  { if ($api=='imdb') require ("imdb_charts.inc"); }
+if ($check_nowplay) { if ($api=='imdb') require ("imdb_nowplaying.inc"); }
 
 #===============================================[ Summary and HTML footer ]===
 $passed  = $methods - $failures;
